...
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/iv_card"
                    app:layout_constraintStart_toStartOf="@id/iv_card"
                    app:layout_constraintTop_toBottomOf="@id/tv_mendaftar" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nama_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="30dp"
                    app:hintEnabled="false"
                    app:hintAnimationEnabled="false"
...
                    app:boxBackgroundColor="#FAFAFA"
                    app:layout_constraintTop_toBottomOf="@id/tv_informasi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_nama"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="Masukkan nama lengkap anda"
                            android:inputType="textEmailAddress"
                            android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="30dp"
                    app:hintEnabled="false"
                    app:endIconMode="custom"
...
                    app:boxBackgroundColor="#FAFAFA"
                    app:layout_constraintTop_toBottomOf="@id/nama_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="Masukkan alamat email anda"
                            android:inputType="textEmailAddress"
                            android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="30dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
...
                    app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                    app:layout_constraintTop_toBottomOf="@id/email_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_passowrd"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="Masukkan password anda"
                            android:inputType="textPassword"
                            android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/konfirmasi_password_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="30dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
...
                    app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                    app:layout_constraintTop_toBottomOf="@id/password_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_konfirmasi_passowrd"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="Konfirmasi password anda"
                            android:inputType="textPassword"
                            android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/konfirmasi_password_container" />
...
                <TextView
                    android:id="@+id/tv_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="84dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Sign In"
                    android:textColor="#193C8D"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/tv_sudah_memiliki_akun"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_sudah_memiliki_akun"
...
