...
                    app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                    app:layout_constraintTop_toBottomOf="@id/email_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_masukkan_passowrd"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="Masukkan password anda"
                            android:inputType="textPassword"
                            android:textSize="14sp" />
...
                <CheckBox
                    android:id="@+id/cb_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/password_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_masuk"
                    android:layout_marginEnd="29dp"
                    android:buttonTint="@color/primary_blue"
                    android:layout_marginVertical="12dp" />

                <TextView
                    android:id="@+id/tv_password"
...
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Belum memiliki akun ?"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_signup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_masuk" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
...
