...
        android:id="@+id/main_home"
        android:name="com.binar.secondhand.kel2.ui.home.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" >
    </fragment>
    <fragment
        android:id="@+id/main_account"
        android:name="com.binar.secondhand.kel2.ui.profile.ProfileFragment"
        android:label="ProfileFragment"
        tools:layout="@layout/fragment_profile"/>
</navigation>
